# hinge-tracking-tools

./: .gitignore  README.md  pyproject.toml
examples/: compare_scutellum_obj.py  estimate_haltere_phase.py  estimate_scutellum_phase.py  fit_haltere_model.py  plot_scutellum_motion.py  plot_scutellum_motion_diff.py  plot_scutum_motion.py  show_video_sync.py  track_haltere.py  track_scutellum.py  track_scutum.py  view_scutellum.py
examples/data/: haltere_angle.npy  haltere_model_fit.npy  haltere_tracking_data_backup.pkl  scutellum_tracking_data.hdf5  scutum_tracking_data.hdf5
hinge_tracking_tools/: __init__.py  assisted_tracker.py  auto_tracker.py  estimate_haltere_phase.py  haltere_model.py  sync_frame_player.py  utils.py
